Remove references to restrict to 4 pages

--- a/latex/paper.tex
+++ b/latex/paper.tex
@@ -111,7 +111,7 @@ the theory through toy examples.
 
 Functional programming is arguably one of the oldest programming paradigms. In it is
 purest form, it is based on a minimalistic theoretical background
-($\lambda$-calculus~\cite{Baren84}). Relatively recent
+($\lambda$-calculus). Relatively recent
 formulations~\cite{Meije91, Wadle93} also introduced concepts from category
 theory. While the every day use of functional programming does not necessarily
 require the programmer to be aware of the theory, understanding it usually leads
@@ -372,7 +372,7 @@ parallel collections.
 
 Coding sprints or ``hackathons'' have long been used by open source software
 projects to speed up development and increase participation of community
-members~\cite{Adams11}. In a typical sprint, project members set measurable
+members. In a typical sprint, project members set measurable
 targets and work intensively in a tight deadline to deliver them. To ensure the
 timely delivery of the student projects, we organized an one day coding sprint,
 during which the students were requested to i) set explicit targets ii) write
